# yt-video-transcribe-and-summarize-generate-quiz-questions

./: Readme.md  response.json
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/app/api/: heldth.py  route_generate.py
backend/app/config/: config.py  openai.py
backend/app/schema/: schemas.py
backend/app/services/: generateQuizeService.py  generateService.py  generateSummarizationService.py  videoSummarizationAndQuizeGenerateService.py  whisperService.py  ytService.py
client/: package-lock.json  package.json
client/app/: page.tsx
client/components/chat/: ChatMessage.tsx
client/types/: chat.response.ts
