[project]
name = "langgrapth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "faster-whisper>=1.2.1",
    "langchain>=1.2.15",
    "openai>=2.30.0",
    "openai-whisper>=20250625",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.44.0",
    "yt-dlp>=2026.3.17",
]
